examples/compiler_errors/row_effects/unhandled_root_effect_e406.flx
effect Console {
    print: String -> ()
}

fn log(msg: String) -> Unit with Console {
    perform Console.print(msg)
}

fn main() -> Unit with Console {
    log("x");
}
